# series-tracker

./: .gitignore  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  keepalive.yml  refresh.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5f6a776329d1_initial_schema.py  a1b2c3d4e5f6_google_auth.py  b2c3d4e5f6a7_episodes_air_date_index.py  c3d4e5f6a7b8_series_ratings.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  me.py  series.py  users.py
backend/app/core/: config.py  db.py  ratelimit.py
backend/app/jobs/: refresh.py
backend/app/models/: __init__.py  episode.py  series.py  series_rating.py  user.py  user_series.py  watched_episode.py
backend/app/schemas/: auth.py  series.py  user.py
backend/app/services/: account.py  auth.py  email.py  google_auth.py  ratings.py  security.py  series.py  series_cache.py  tmdb_client.py  tracking.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_calendar.py  test_email.py  test_follow_series.py  test_google_auth.py  test_health.py  test_password_reset.py  test_rate_limit.py  test_ratings.py  test_refresh_job.py  test_security.py  test_series.py  test_series_cache.py  test_series_providers.py  test_tmdb_client.py  test_users.py  test_watched_progress.py
docs/: 01-analisis-funcional.md  02-arquitectura-tecnica.md  03-plan-trabajo.md  04-despliegue.md  05-seguridad.md  06-aceptacion-mvp.md  07-keepalive-externo.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+50 files in other folders)
